syntax = "proto3";

import "Messages/test_proto3_optional.proto";
import "google/protobuf/timestamp.proto";


option csharp_namespace = "Validation.Mediator";

package Validator;

message EmailValidationRequest {
  string Email = 1;
}

message EmailValidationRequests {
   repeated EmailValidationRequest Emails = 1;
}

message EmailValidationReply {
    StringValidationResult Email = 1;
}

message EmailValidationReplies {
  repeated EmailValidationReply Emails = 1;
}